kubernetes/apps/database/surrealdb/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app surrealdb
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: surrealdb
    gethomepage.dev/group: database
    # gethomepage.dev/icon: sh-kokoro.svg
    gethomepage.dev/name: *app
    gethomepage.dev/app: *app
    external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 200"]
spec:
  hostnames:
    - "surrealdb.${SECRET_DOMAIN}"
    - "sdb.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: surrealdb
          namespace: database
          port: 8000
